Remove JVM argument `--illegal-access=permit` usage
This JVM argument is deprecated and was being used when building with
Java 16. But since we already introduced the `--add-opens` to build with
Java >= 17 we can use the same approach to build with Java 16. So we can
keep our build more consistent.

See: https://openjdk.java.net/jeps/396
See: https://docs.oracle.com/en/java/javase/16/docs/specs/man/java.html
See: https://docs.oracle.com/en/java/javase/17/docs/specs/man/java.html
See: https://docs.oracle.com/en/java/javase/16/migrate/index.html
See: https://docs.oracle.com/en/java/javase/17/migrate/index.html